# django-250415

./: .gitignore  LICENSE  MANIFEST.in  manage.py  pyproject.toml
api/: middleware.py  models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
api/migrations/: 0001_initial.py  0002_hostpasswordhistory.py  0003_rename_password_hostpasswordhistory_root_password.py
host_mgr/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
requirements/: dev.txt
